test/libsolidity/syntaxTests/nameAndTypeResolution/473_storage_location_non_array_or_struct_disallowed.sol
contract C {
    function f(uint storage a) public { }
}
// ----
// TypeError: (28-42): Data location can only be specified for array, struct or mapping types, but "storage" was given.
